--- a/assets/scss/_container.scss
+++ b/assets/scss/_container.scss
@@ -28,7 +28,7 @@ $dark-accent: #FFB800;
 // _container.scss
 .container {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0;
   padding: 20px;
   flex: 1; 
   padding-top: 50px; 
