--- a/assets/scss/_container.scss
+++ b/assets/scss/_container.scss
@@ -64,7 +64,7 @@ h1, h2, h3 {
   }
 }
 
-.sidebar-link {
+.sidebar {
   font-family: "Bebas Neue", sans-serif;
   font-size: 14px;
   text-transform: uppercase;
